--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2021"
 
 [dependencies]
 anomaly = "0.2"
+cosmrs = "0.4"
 ed25519-dalek = "1"
 prost = "0.9"
 serde = { version = "1", features = ["serde_derive"] }
